--- a/package.json
+++ b/package.json
@@ -5,19 +5,26 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "watch": "ng build --configuration development",
+    "start-app": "ng serve --port 4200",
+    "start-api": "json-server --watch ./projects/demo-application/src/server/database.json",
+    "dev": "concurrently \"npm run start-app\" \"npm run start-api\"",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
+    "@angular/common": " ^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@phosphor-icons/web": "^2.0.3",
+    "@po-ui/ng-templates": "^17.26.10",
+    "concurrently": "^7.0.0",
+    "json-server": "^1.0.0-beta.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
